--- a/src/components/Tasks.scss
+++ b/src/components/Tasks.scss
@@ -24,6 +24,10 @@
         .task-list {
             margin-top: 28px;
         }
+
+        h3 {
+            margin-bottom: 18px;
+        }
     }
 
     .completed-tasks {
