--- a/src/components/Tasks.scss
+++ b/src/components/Tasks.scss
@@ -1,14 +1,15 @@
-.container-tasks {
+.tasks-container {
+    padding: 60px 85px;
     display: flex;
     flex-direction: column;
-    padding: 60px 85px;
-    margin-top: 20px;
     max-width: 40%;
     padding-top: 50px;
     height: 100vh;
+    overflow-y: hidden;
+    flex: auto;
 
     h2 {
-        margin-bottom: 28px;
+        margin-bottom: 24px;
     }
 
     h3 {
@@ -21,12 +22,37 @@
         display: flex;
         flex-direction: column;
 
-        .task-list {
-            margin-top: 28px;
-        }
-
         h3 {
             margin-bottom: 18px;
+        }
+
+        /* width */
+        ::-webkit-scrollbar {
+            width: 5px;
+        }
+
+        /* Track */
+        ::-webkit-scrollbar-track {
+            background: #f1f1f1;
+        }
+
+        /* Handle */
+        ::-webkit-scrollbar-thumb {
+            background: linear-gradient(
+                262.71deg,
+                #00d1ff -30.04%,
+                #00ffa3 124.74%
+            );
+        }
+
+        /* Handle on hover */
+        ::-webkit-scrollbar-thumb:hover {
+            background: #555;
+        }
+
+        .tasks-list {
+            overflow-y: auto;
+            margin-top: 28px;
         }
     }
 
@@ -34,7 +60,7 @@
         flex: 1;
         padding-top: 28px;
 
-        .task-list {
+        .tasks-list {
             margin-top: 28px;
         }
     }
